force-app/main/default/objects/pro_Party_In_Deal__c/pro_Party_In_Deal__c.object-meta.xml
<CustomObject>
    <label>Party In Deal</label>
    <nameField>
        <label>Party In Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties In Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>