force-app/main/default/objects/pro_Party_In_Deal__c/fields/pro_Active_Deal__c.field-meta.xml
<CustomField>
    <fullName>pro_Active_Deal__c</fullName>
    <description>Returns True if the associated Deal is active, otherwise returns False.</description>
    <formula>IF(pro_Asset_in_Deal__r.leaseworks__Marketing_Activity__r.leaseworks__Inactive_MA__c, False, True)</formula>
    <label>Active Deal?</label>
    <type>Checkbox</type>
</CustomField>