force-app/main/default/objects/pro_Party_In_Deal__c/fields/pro_Asset_in_Deal__c.field-meta.xml
<CustomField>
    <fullName>pro_Asset_in_Deal__c</fullName>
    <label>Asset in Deal</label>
    <referenceTo>leaseworks__Aircraft_Proposal__c</referenceTo>
    <relationshipLabel>Parties In Deal</relationshipLabel>
    <relationshipName>Parties_In_Deals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>