force-app/main/default/objects/pro_Party_In_Deal__c/fields/pro_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Deal_Type__c</fullName>
    <description>The type of Deal that the Asset sits under.</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine Exchange</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Lease Amendment</fullName>
            </value>
            <value>
                <fullName>Lease Extension</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Sale_Novation</fullName>
            </value>
            <value>
                <fullName>Sale_Off_Lease</fullName>
            </value>
            <value>
                <fullName>SLB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>