force-app/main/default/objects/pro_Party_In_Deal__c/validationRules/pro_DealTypeMustMatchAsset.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_DealTypeMustMatchAsset</fullName>
    <active>true</active>
    <description>Requires that the selection for the Deal Type picklist must match the Deal Type field from the Asset in Deal</description>
    <errorConditionFormula>TEXT(pro_Deal_Type__c) !=  pro_Asset_in_Deal__r.leaseworks__Deal_Type__c</errorConditionFormula>
    <errorMessage>The Deal Type on this Party in Deal must match the Deal Type on the related Asset in Deal. Please update the Deal Type to match before saving.</errorMessage>
</ValidationRule>